--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Alisha Ar<span class=name-i>i</span>al</h1>
-        <h2>Graphic Designer</h2>
+        <h2>Graphic Designer, Ottawa</h2>
     </header>
     
     <main> 
