--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link href='https://fonts.googleapis.com/css?family=Signika:300,700' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
     <title>Alisha Arial</title>
+    <meta name="handheldfriendly" content="true">
+    <meta name="mobileoptimized" content="240">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
     <header>
