arial text adjustment, and mobile adjustment

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Alisha Ar<span class=name-i>i</span>al</h1>
+        <h1>Alisha A<span class=name-r>r</span>ial</h1>
         <h2>Graphic Designer, Ottawa</h2>
     </header>
     
